--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
   <script src="scripts/app.js"></script>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-       <a class="navbar-brand" href="#">COMP308</a>
+       <a class="navbar-brand" href="#">Prateek's Portfolio</a>
        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class="navbar-toggler-icon"></span>
+         <span class=""></span>
        </button>
 
        <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -27,35 +27,35 @@
            <% } else { %>
            <li class="nav-item">
             <% } %>
-             <a class="nav-link" href="/"><i class="fa fa-lg fa-home"></i> Home <span class="sr-only">(current)</span></a>
+             <a class="nav-link" href="/"><i class="fa fa-lg fa-graduation-cap"></i> Home <span class="sr-only">(current)</span></a>
            </li>
            <% if(title == "About") {%>
            <li class="nav-item active">
            <% } else { %>
            <li class="nav-item">
             <% } %>
-             <a class="nav-link" href="/about"><i class="fa fa-lg fa-info"></i> About</a>
+             <a class="nav-link" href="/about"><i class="fa fa-lg fa-play-circle-o"></i> About</a>
            </li>
            <% if(title == "Products") {%>
            <li class="nav-item active">
            <% } else { %>
            <li class="nav-item">
             <% } %>
-               <a class="nav-link" href="/products"><i class="fa fa-lg fa-briefcase"></i> Products</a>
+               <a class="nav-link" href="/products"><i class="fa fa-lg fa-shopping-basket"></i> Products</a>
              </li>
              <% if(title == "Services") {%>
            <li class="nav-item active">
            <% } else { %>
            <li class="nav-item">
             <% } %>
-               <a class="nav-link" href="/services"><i class="fa fa-lg fa-birthday-cake"></i> Services</a>
+               <a class="nav-link" href="/services"><i class="fa fa-lg fa-industry"></i> Services</a>
              </li>
              <% if(title == "Contacts") {%>
            <li class="nav-item active">
            <% } else { %>
            <li class="nav-item">
             <% } %>
-               <a class="nav-link" href="/contact"><i class="fa fa-lg fa-phone"></i> Contact</a>
+               <a class="nav-link" href="/contact"><i class="fa fa-lg fa-mobile"></i> Contact</a>
              </li>
          </ul>
        </div>
