--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,77 +1,15 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    
- 
-  </head>
-  <title><%= title %></title>
-  <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="content/app.css">
-  <body>
-  <h1> welcome </h1>
-  <script src="jquery/dist/jquery.min.js"></script>
-  <script src="bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="scripts/app.js"></script>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-       <a class="navbar-brand" href="#">Prateek's Portfolio</a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-         <span class=""></span>
-       </button>
+<% include ./partials/header.ejs  %>
 
-       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-         <ul class="navbar-nav ml-auto">
-         <% if(title == "Home") {%>
-           <li class="nav-item active">
-           <% } else { %>
-           <li class="nav-item">
-            <% } %>
-             <a class="nav-link" href="/"><i class="fa fa-lg fa-graduation-cap"></i> Home <span class="sr-only">(current)</span></a>
-           </li>
-           <% if(title == "About") {%>
-           <li class="nav-item active">
-           <% } else { %>
-           <li class="nav-item">
-            <% } %>
-             <a class="nav-link" href="/about"><i class="fa fa-lg fa-play-circle-o"></i> About</a>
-           </li>
-           <% if(title == "Products") {%>
-           <li class="nav-item active">
-           <% } else { %>
-           <li class="nav-item">
-            <% } %>
-               <a class="nav-link" href="/products"><i class="fa fa-lg fa-shopping-basket"></i> Products</a>
-             </li>
-             <% if(title == "Services") {%>
-           <li class="nav-item active">
-           <% } else { %>
-           <li class="nav-item">
-            <% } %>
-               <a class="nav-link" href="/services"><i class="fa fa-lg fa-industry"></i> Services</a>
-             </li>
-             <% if(title == "Contacts") {%>
-           <li class="nav-item active">
-           <% } else { %>
-           <li class="nav-item">
-            <% } %>
-               <a class="nav-link" href="/contact"><i class="fa fa-lg fa-mobile"></i> Contact</a>
-             </li>
-         </ul>
-       </div>
-     </nav>
 
      <div class="container">
        <div class="jumbotron">
-           <h1 class="display-4">Hello, world!</h1>
-           <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-           <hr class="my-4">
-           <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-           <p class="lead">
-             <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-           </p>
-         </div>
+           <h1 class="display-4">welcome to <%=title %></h1>
+          <% if (title=="Contacts") { %>
+          <a class= "btn btn-primary" href="/contacts-list" role="button"> Favourites</a>
+            <%  } %>
+        </div>
      </div>
 
-  </body>
-</html>
+
+<% include ./partials/footer.ejs %>
