--- a/views/templates/about.ejs
+++ b/views/templates/about.ejs
@@ -9,7 +9,7 @@
         </div>
         <body>
            <div id="content" >
-  <div id="left">
+  <div id="lft">
         <a target="_blank" >
     <img src="Assets/images/Prateek.jpg" alt="image" width="250" height="300">
   </a>
@@ -17,7 +17,7 @@
      
   </div>
 
-  <div id="right"><b>Description:</b>
+  <div id="rght"><b>Description:</b>
      Experienced Associate software dev. with  IT experience.
       Skills include web dev, analytical thinking and creative problem solving. Able to apply customer 
      service concepts to IT to improve user experience for clients, employees and administration.
