--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -51,3 +51,19 @@
   padding: 1em;
   background: white;
 }
+
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.containerForm {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
