--- a/views/templates/projects.ejs
+++ b/views/templates/projects.ejs
@@ -2,11 +2,46 @@
 
 <body >
      <div class="container" >
-       <div  class="jumbotron">
-           <h1 class="display-4">welcome to <%=title %></h1>
+       <div  class="jumbotron"></div>
+         <div id="top">
+         
+                    <div id="left"><a target="_blank" >
+    <img src="Assets/images/iguana.png"  alt="image" width="360" height="200">
+  </a></div>
+                
+                    <div id="right"><a target="_blank" >
+                     <b><h4>HL7 Message in Iguana</h4></b>
+    <p> USED HL7 Messages to transfer electronic data between disparate healthcare systems.
+     Each HL7 message sends information about a particular
+     event such as a patient admission. This section describes the contents of
+      an HL7 message and how an HL7 message is organized.</p>
+  </a></div>
+
+         </div>
+         <div id ="center">
+                         <div id="left"><a target="_blank" >
+    
+  </a></div>
+
+                
+                    <div id="right"><a target="_blank" >
+                     <b><h4>Andorid googlev2 naviagation app</h4></b>
+    <p> Used Android studio and made an app for google navigation.
+    User has to enter the starting point and end point and user can view the Transit on the google map. </p>
+    </div></div>
+        <div id="bottom">
+                          <div id="left"><a target="_blank" >
+    <img src="Assets/images/project2.png" alt="image" width="360" height="200">
+  </a></div>
+                    <div id="right"><a target="_blank" >
+   
+  </a></div>
+         
+         </div>
+         
 
 
-           
+
         </div>
      </div>
 
