--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,5 @@
+
+<!--Prateek  kaushal 300985002 SEC:008 -->
 <script src="jquery/dist/jquery.min.js"></script>
   <script src="bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="scripts/app.js"></script>
