--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,4 +1,9 @@
-/* custom CSS here */
+/*
+Prateek kaushal 300985002 Sec 008
+*/
+/*
+Css for allignment of div tags in  services and projects
+*/
 
 #content {
   overflow: auto;
