--- a/views/templates/about.ejs
+++ b/views/templates/about.ejs
@@ -12,18 +12,18 @@
            <div id="content" >
   <div id="lft">
         <a target="_blank" >
-    <img src="Assets/images/Prateek.jpg" alt="image" width="250" height="300">
+    <img src="Assets/images/Prateek.jpg" alt="image" width="250" height="300"> <!-- image for about page-->
   </a>
    
      
   </div>
 
-  <div id="rght"><b>Description:</b>
+  <div id="rght"><b>Description:</b><!-- Description for about page-->
      Experienced Associate software dev. with  IT experience.
       Skills include web dev, analytical thinking and creative problem solving. Able to apply customer 
      service concepts to IT to improve user experience for clients, employees and administration.
 <p></p>
-
+               <!-- google drive link for downloading the Resume in PDF fromat-->
      <b><a href="https://drive.google.com/file/d/10suhNDCWn7bOvVMr0ex1id8n8jmBOVB1/view?usp=sharing"
       download="resume"  class="fas fa-file-download" >
      Download Resume</b></a>
