--- a/views/templates/contact.ejs
+++ b/views/templates/contact.ejs
@@ -6,14 +6,14 @@
   
       <div  id="left" >
         
-           
+           <!-- My contact infcormation-->
            <h3>Name: Prateek Kaushal</h3><br>
             <h3>Email:Prateekamable@gmail.com</h3><br>
              <h3>Mob: 4379299492</h3><br>
         </div>
       <div class="containerForm" id="right">
 
-<h1>Contact me:</h1>
+<h1>Contact me:</h1> <!-- form for contacting me (not working yet)-->
             <form href="/About" method="post">
     <label for="frstname">First Name</label>
     <input type="text" id="frstname" name="Firstname" placeholder="Your name.....">
