--- a/views/templates/home.ejs
+++ b/views/templates/home.ejs
@@ -4,7 +4,10 @@
      <div class="container" >
        <div  class="jumbotron">
            <h1 class="display-4">welcome to <%=title %></h1>
+           <!-- Mission statement for home page-->
            <p><b>MISSION:</b>Targeting a Software Engineering position in a fast paced and challenging environment</p>
+
+           <!-- button for navigating to about page-->
           <% if (title=="Home") { %>
           <a class= "btn btn-primary" href="/About" role="button"> Know more About me </a>
 
