--- a/views/templates/projects.ejs
+++ b/views/templates/projects.ejs
@@ -10,7 +10,7 @@
                     <div id="left"><a target="_blank" >
     <img src="Assets/images/iguana.png"  alt="image" width="360" height="200">
   </a></div>
-                
+                <!-- project 1 -->
                     <div id="right"><a target="_blank" >
                      <b><h4>HL7 Message in Iguana</h4></b>
     <p> USED HL7 Messages to transfer electronic data between disparate healthcare systems.
@@ -24,7 +24,7 @@
                          <div id="left"><a target="_blank" >
     
   </a></div>
-
+<!-- project 2-->
                 
                     <div id="right"><a target="_blank" >
                      <b><h4>Andorid googlev2 naviagation app</h4></b>
