--- a/views/templates/services.ejs
+++ b/views/templates/services.ejs
@@ -5,8 +5,11 @@
        <div  class="jumbotron">
            <h1 class="display-4">welcome to <%=title %></h1>
           </div>
-
+          <!-- below i have used division to align the logo of different services
+               and inserted images for better look.
+          -->
          
+         <!--  css #top for align the div to top and left/right to align within the top div tag-->
          <div id="top">
          
                     <div id="left"><a target="_blank" >
