--- a/public/Content/about.css
+++ b/public/Content/about.css
@@ -1,3 +1,10 @@
+/*
+Prateek kaushal 300985002 Sec 008
+*/
+/*
+Css for allignment of div tags in  services and projects
+*/
+
 #content {
   overflow: auto;
   width: 100%;
