--- a/views/templates/contact.ejs
+++ b/views/templates/contact.ejs
@@ -14,8 +14,8 @@
       <div class="containerForm" id="right">
 
 <h1>Contact me:</h1> <!-- form for contacting me (not working yet)-->
-            <form href="/About" method="post">
-    <label for="frstname">First Name</label>
+            <form  action="about" method="Get">
+    <label for="frstname">First Name</label>  
     <input type="text" id="frstname" name="Firstname" placeholder="Your name.....">
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <label for="lstname">Last Name</label>
@@ -30,7 +30,9 @@
     <label for="subject">Message</label> &nbsp;&nbsp;
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:150px" style="width:350px"></textarea>
 <br> 
-    <input type="submit" value="Submit" href="/About.ejs" >
+    <button class="btn btn-primary" >
+                <i class="fas fa-edit"></i> Submit</button>
+                
   </form>
 
 
